# FlagTree

./: .gitignore  CMakeLists.txt  README.md  README_cn.md  pyproject.toml  setup.py  tle.md  tle_cn.md
.github/workflows/: aipu-build-and-test.yml  aipu3.3-build-and-test.yml  aipu3.3-delivery.yml  ascend-build-and-test.yml  ascend3.2-build-and-test.yml  ascend3.2-delivery.yml  ascend3.5-delivery.yml  build-deb.yml  build-rpm.yml  enflame-gcu300-3.3-build-and-test.yml  enflame-gcu400-build-and-test.yml  enflame3.3-gcu300-build-and-test.yml  enflame3.5-gcu400-delivery.yml  enflame3.6-gcu400-delivery.yml  flagcicd-hopper-build-and-test.yml  hcu3.1-build-and-test.yml  hcu3.1-delivery.yml  hcu3.6-delivery.yml  hopper-build-and-test.yml  hopper-delivery.yml  iluvatar3.1-build-and-test.yml  iluvatar3.1-delivery.yml  metax3.0-build-and-test.yml  metax3.0-delivery.yml  mthreads-build-and-test.yml  mthreads3.1-delivery.yml  mthreads3.2-delivery.yml  mthreads3.6-delivery.yml  nv-build-and-test.yml  nv-delivery.yml  rpu3.6-build-and-test.yml  sunrise-delivery.yml  thrive-build-and-test.yml  thrive3.6-delivery.yml  tsingmicro-build-and-test.yml  tsingmicro3.3-build-and-test.yml  tsingmicro3.3-delivery.yml  xpu3.0-build-and-test.yml  xpu3.0-delivery.yml
documents/: install.md  install_aipu.md  install_aipu_cn.md  install_ascend.md  install_ascend_cn.md  install_cn.md  install_enflame.md  install_enflame_cn.md  install_hcu.md  install_hcu_cn.md  install_iluvatar.md  install_iluvatar_cn.md  install_metax.md  install_metax_cn.md  install_mthreads.md  install_mthreads_cn.md  install_rpu.md  install_rpu_cn.md  install_sunrise.md  install_sunrise_cn.md  install_tsingmicro.md  install_tsingmicro_cn.md  install_xpu.md  install_xpu_cn.md
documents/tle/ascend/: tle.dsa.ascend.compile_hint.md  tle.dsa.ascend.ops.md
include/flagtree/Common/: UnifiedHardware.h
include/triton/Dialect/Triton/IR/: CMakeLists.txt
include/triton/Dialect/TritonGPU/Transforms/: TritonGPUConversion.h
include/triton/Dialect/TritonNvidiaGPU/IR/: TritonNvidiaGPUOps.td
lib/: CMakeLists.txt
lib/Analysis/: Alias.cpp  Membar.cpp
lib/Conversion/TritonToTritonGPU/: CMakeLists.txt  TritonGPUConversion.cpp  TritonToTritonGPUPass.cpp
lib/Dialect/: CMakeLists.txt
lib/Dialect/Triton/IR/: CMakeLists.txt  Ops.cpp  Traits.cpp
lib/Dialect/TritonGPU/Transforms/: AccelerateMatmul.cpp  CMakeLists.txt  OptimizeDotOperands.cpp  ReduceDataDuplication.cpp  Utility.cpp
lib/Dialect/TritonGPU/Transforms/Pipeliner/: Schedule.cpp  TleWGMMAAnalysis.cpp  TleWGMMAAnalysis.h  WGMMAPipeline.cpp
lib/Dialect/TritonNvidiaGPU/IR/: Ops.cpp
lib/Dialect/TritonNvidiaGPU/Transforms/: FenceInsertion.cpp  OptimizeDescriptorEncoding.cpp
lib/flagtree/Common/: CMakeLists.txt  UnifiedHardware.cc
python/: setup.py
python/scripts/: link_flagtree_cpu.sh  link_triton_cpu.sh
python/setup_tools/: setup_helper.py
python/setup_tools/utils/: __init__.py  ascend.py  cpu.py  metax.py  mthreads.py  rpu.py  thrive.py  tools.py
python/src/: ir.cc  main.cc  passes.cc
python/test/regression/: test_sparse_mla_tle_nochunk_codegen.py
python/test/tle/: test_compile_hint.py
python/test/tle/integration/: test_tle_tma_copy.py
python/test/tle/unit/: test_insert_tile_dynamic_index.py  test_insert_tile_static_index.py  test_tle.py  test_tle_get_local_pe.py  test_tle_get_local_pe.sh  test_tle_gpu_slot.py
python/test/tle/unit/fixtures/: vector-add.cu
python/test/unit/language/: test_hint_manager.py
python/triton/: FLAGTREE_BACKEND  __init__.py  _flagtree_backend.py  _utils.py  flagtree_spec.py  knobs.py
python/triton/compiler/: __init__.py  code_generator.py  hint_manager.py
python/triton/experimental/gluon/: __init__.py
python/triton/experimental/gluon/amd/: __init__.py
python/triton/experimental/gluon/language/: __init__.py
python/triton/experimental/gluon/language/amd/: __init__.py
python/triton/experimental/gluon/language/amd/gfx1250/: __init__.py
python/triton/experimental/gluon/language/nvidia/ampere/: __init__.py
python/triton/experimental/gluon/language/nvidia/blackwell/: __init__.py
python/triton/experimental/gluon/language/nvidia/hopper/: __init__.py
python/triton/experimental/gluon/nvidia/: __init__.py
python/triton/experimental/tle/language/: __init__.py  core.py  distributed.py  pipe.py
python/triton/experimental/tle/language/dsa/: core.py
python/triton/experimental/tle/language/gpu/: __init__.py  core.py  semantic.py  types.py
python/triton/experimental/tle/language/raw/: core.py
python/triton/experimental/tle/raw/: source_store.py
python/triton/experimental/tle/raw/cuda/: runtime.py
python/triton/experimental/tle/raw/mlir/: runtime.py
python/triton/experimental/tle/raw/tops/: mlir_runtime.py  runtime.py
python/triton/extension/: __init__.py
python/triton/language/: __init__.py
python/triton/runtime/: __init__.py  adjust_kernel_param.py  build.py  jit.py
python/triton/tools/: __init__.py
python/tutorials/tle/: 01-fft.py  01-sparse-flash-attn-tle.py  03-topk.py  04-cluster-gemm.py  05-glu.py  06-2D_Depthwise_Conv.py  06-swiglu.py  07-causal-conv1d.py  07-kv-rmsnorm-rope-cache.py  08-rope.py
python/tutorials/tle/deepseek_v32/: 02-sparse-mla.py
python/tutorials/tle/mega/: README.md  __init__.py  task_graph_linear_rmsnorm.py  task_grid_linear_rmsnorm.py  task_grid_rmsnorm_linear.py
python/tutorials/tle/mega/bench/: __init__.py  bench_e2e_ops.py  bench_linear_rmsnorm.py  bench_prefill_decode.py  bench_qwen3_32b.py  bench_vllm_op_compare.py  report_tle_vllm_e2e_ops.py
python/tutorials/tle/mega/kernels/: __init__.py  _common.py  attention.py  embedding.py  linear.py  linear_rmsnorm.py  norm.py  rotary_cache.py
python/tutorials/tle/mega/models/: __init__.py  config.py  engine.py  weights.py
python/tutorials/tle/mega/serving/: __init__.py  chat_cli.py  qwen3_32b_chat.py
python/tutorials/tle/raw/cuda/: 03-matrix-multiplication-smem.py
test/Conversion/: tritonnvidiagpu_to_llvm.mlir
test/Hopper/WarpSpecialization/: ws_lower_token.mlir  ws_token_ops_invalid.mlir
(+4 files in other folders)
